# NeurolingsCE

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  README_EN.md  Shijima-Qt_README.md  ShijimaWidget.cc  common.mk
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-debug.yaml  build-release.yaml
cmake/: BundleDefaultMascot.cmake  GenerateLicenses.cmake
cmake/ElaWidgetToolsBuild/: CMakeLists.txt
dev-docker/: Dockerfile
include/shijima-qt/: Asset.hpp  AssetLoader.hpp  DefaultMascot.hpp  MascotData.hpp  PlatformWidget.hpp  ShijimaContextMenu.hpp  ShijimaHttpApi.hpp  ShijimaLicensesDialog.hpp  ShijimaManager.hpp  ShijimaWidget.hpp  ShimejiInspectorDialog.hpp  SimpleZipImporter.hpp  SoundEffectManager.hpp  cli.hpp
src/app/: Asset.cc  AssetLoader.cc  ForcedProgressDialog.cc  MascotData.cc  ShijimaContextMenu.cc  ShijimaHttpApi.cc  ShijimaLicensesDialog.cc  ShijimaManager.cc  ShijimaWidget.cc  ShimejiInspectorDialog.cc  SoundEffectManager.cc  cli.cc  main.cc
src/docs/: HTTP-API.md
src/packaging/: com.pixelomer.ShijimaQt.desktop  com.pixelomer.ShijimaQt.metainfo.xml  io.github.qingchenyouforcc.NeurolingsCE.desktop  io.github.qingchenyouforcc.NeurolingsCE.metainfo.xml
src/packaging/NeurolingsCE.app/Contents/: Info.plist
src/packaging/NeurolingsCE.app/Contents/Resources/: AppIcon.icns
src/packaging/Shijima-Qt.app/Contents/: Info.plist
src/platform/Platform/: ActiveWindow.hpp  ActiveWindowObserver.hpp  Makefile  Platform.hpp
src/platform/Platform/Linux/: ActiveWindowObserver.cc  DBus.cc  DBus.hpp  ExtensionFile.cc  ExtensionFile.hpp  GNOME.cc  GNOME.hpp  GNOMEWindowObserverBackend.cc  GNOMEWindowObserverBackend.hpp  KDEWindowObserverBackend.cc  KDEWindowObserverBackend.hpp  KWin.cc  KWin.hpp  Makefile  Platform-Linux.hpp  Platform.cc  PrivateActiveWindowObserver.cc  PrivateActiveWindowObserver.hpp  WindowObserverBackend.hpp  kwin_script.js
src/platform/Platform/Linux/gnome_script/: extension.js  metadata.json
src/platform/Platform/Stub/: ActiveWindowObserver.cc  Makefile  Platform.cc
src/platform/Platform/Windows/: ActiveWindowObserver.cc  Makefile  Platform.cc  PrivateActiveWindowObserver.cc  PrivateActiveWindowObserver.hpp
src/platform/Platform/macOS/: ActiveWindowObserver.cc  Makefile  Platform.mm  PrivateActiveWindowObserver.hpp  PrivateActiveWindowObserver.mm
src/resources/: resources.qrc  resources.rc  style.qss
src/tools/: bundle-default.sh  find_dlls.sh
translations/: i18n.qrc  shijima-qt_zh_CN.ts
wiki/: Architecture.md  Building.md  CI-CD.md  Contributing.md  FAQ.md  Getting-Started.md  HTTP-API.md  Home.md  Internationalization.md  Mascot-Packs.md  Platform-Abstraction.md  _Sidebar.md
